--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,11 @@
 @import 'tw-animate-css';
 /* @import 'tailwindcss-animate'; */
 
+*{
+    @apply  scroll-smooth;
+}
+
+
 @custom-variant dark (&:is(.dark *));
 @custom-variant hover (&:hover);
 @custom-variant focus (&:focus);
@@ -42,6 +47,7 @@
 
 :root {
     --radius: 0.625rem;
+    --gray:#8f8f8f;
     --background: oklch(1 0 0);
     --background-secondary: oklch(0.9635 0.0026 124.2);
     --foreground: oklch(0.145 0 0);
@@ -155,6 +161,7 @@
     --color-background-secondary: var(--background-secondary);
     --color-foreground: var(--foreground);
     --color-foreground-secondary: var(--background-secondary);
+    --color-gray:var(--gray);
     --color-card: var(--card);
     --color-card-foreground: var(--card-foreground);
     --color-popover: var(--popover);
@@ -191,7 +198,7 @@
         @apply border-border outline-ring/50;
     }
     body {
-        @apply  capitalize font-jost;
+        @apply  capitalize font-jost text-gray ;
     }
     section {
         @apply py-6;
@@ -200,11 +207,69 @@
     h1,h2,h3,h4,h5,h6 {
         @apply !font-marcellus;
     }
+
+
+
 }
+
+
+@layer utilities {
+    .hovered-underlined {
+        @apply  before:bg-foreground/20 after:bg-foreground relative inline-block  before:absolute before:bottom-0 before:left-0 before:h-[1px] before:w-full after:absolute after:right-0 after:bottom-0 after:h-[2px] after:w-0 after:transition-all after:duration-300 hover:after:right-auto hover:after:left-0 hover:after:w-full;
+    }
+
+    .hovered-underlined_white {
+        @apply  before:bg-background/20 after:bg-background relative inline-block  before:absolute before:bottom-0 before:left-0 before:h-[1px] before:w-full after:absolute after:right-0 after:bottom-0 after:h-[2px] after:w-0 after:transition-all after:duration-300 hover:after:right-auto hover:after:left-0 hover:after:w-full;
+    }
+
+    .nav-link {
+        @apply relative block w-fit  after:bg-foreground  after:absolute after:right-0 after:bottom-0 after:h-[1px] after:w-0 after:transition-all after:duration-300 hover:after:right-auto hover:after:left-0 hover:after:w-full;
+    }
+
+    .aos-animate.open-up {
+        -webkit-animation: 1s open-up forwards;
+                animation: 1s open-up forwards;
+    }
+}
+
+
+@-webkit-keyframes open-up {
+    0% {
+        -webkit-clip-path: inset(48% 34% 36% 35%);
+                clip-path: inset(48% 34% 36% 35%);
+    }
+    100% {
+        -webkit-clip-path: inset(0% 0% 0% 0%);
+                clip-path: inset(0% 0% 0% 0%);
+    }
+}
+
+
+@keyframes open-up {
+    0% {
+        -webkit-clip-path: inset(48% 34% 36% 35%);
+                clip-path: inset(48% 34% 36% 35%);
+    }
+    100% {
+        -webkit-clip-path: inset(0% 0% 0% 0%);
+                clip-path: inset(0% 0% 0% 0%);
+    }
+}
+
+
 #nprogress {
     z-index: 9999999999 !important;
 }
 .carousel-icon svg {
     width: 28px;  /* or whatever size you want */
     height: 28px;
+  }
+
+  [data-slot="carousel-content"] {
+    @apply flex-grow;
+  }
+
+
+  [aria-label="Notifications alt+T"]{
+    @apply p-0;
   }
