--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,7 +198,7 @@
         @apply border-border outline-ring/50;
     }
     body {
-        @apply  capitalize font-jost text-gray ;
+        @apply  capitalize font-jost !text-gray ;
     }
     section {
         @apply py-6;
