add button styles, implement rating component, and refactor shop filters

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -214,6 +214,10 @@
         @apply !font-marcellus text-foreground;
     }
 
+    button{
+        @apply cursor-pointer disabled:cursor-not-allowed;
+    }
+
 
 
 }
