--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
 
 
-/* @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Marcellus&display=swap'); */
 
 @import 'tailwindcss';
 @import 'tw-animate-css';
-/* @import 'tailwindcss-animate'; */
+
 
 *{
     @apply  scroll-smooth;
@@ -47,6 +46,8 @@
 
 
 :root {
+    --font-jost: 'Jost', sans-serif;
+    --font-marcellus: 'Marcellus', serif;
     --radius: 0.625rem;
     --gray:#8f8f8f;
     --background: oklch(1 0 0);
@@ -83,7 +84,9 @@
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
 }
-.dark {
+/* .dark {
+    --font-jost: 'Jost', sans-serif;
+    --font-marcellus: 'Marcellus', serif;
     --radius: 0.625rem;
     --background: oklch(1 0 0);
     --background-secondary: oklch(0.9635 0.0026 124.2);
@@ -117,10 +120,15 @@
     --sidebar-accent-foreground: oklch(0.205 0 0);
     --sidebar-border: oklch(0.922 0 0);
     --sidebar-ring: oklch(0.708 0 0);
-}
-/* .dark {
+} */
+
+
+.dark {
+    --font-jost: 'Jost', sans-serif;
+    --font-marcellus: 'Marcellus', serif;
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
+    --background-secondary: oklch(0.1554 0.0041 303.78);
     --card: oklch(0.205 0 0);
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.205 0 0);
@@ -150,7 +158,7 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.556 0 0);
-} */
+}
 
 @theme inline {
     --font-marcellus: 'Marcellus', serif;
